# cie-middleware-mobile

./: .gitignore  PROGRESS.md  README.md  agents.md  legacy_block.tmp  sdk_unified_plan.md
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/CieSignMockApp/: build.gradle  proguard-rules.pro
android/CieSignMockApp/src/androidTest/java/it/ipzs/ciesign/mock/: MockSignInstrumentedTest.kt
android/CieSignMockApp/src/main/: AndroidManifest.xml
android/CieSignMockApp/src/main/java/it/ipzs/ciesign/mock/: MainActivity.kt
android/cieSignSdk/: build.gradle  consumer-rules.pro
android/cieSignSdk/src/main/cpp/: CMakeLists.txt  mock_sign_android.cpp  nfc_sign_android.cpp
android/cieSignSdk/src/main/java/it/ipzs/ciesign/sdk/: CieSignSdk.kt  NativeBridge.kt  PdfAppearanceOptions.kt
cie_sign_flutter/: README.md  deploy.sh  pubspec.yaml
cie_sign_flutter/android/: build.gradle  settings.gradle
cie_sign_flutter/android/src/main/: AndroidManifest.xml
cie_sign_flutter/android/src/main/kotlin/it/ipzs/cie_sign_flutter/: CieSignFlutterPlugin.kt
cie_sign_flutter/android/src/test/kotlin/it/ipzs/cie_sign_flutter/: CieSignFlutterPluginTest.kt
cie_sign_flutter/example/: README.md  pubspec.yaml
cie_sign_flutter/example/android/app/: build.gradle.kts
cie_sign_flutter/example/android/app/src/main/: AndroidManifest.xml
cie_sign_flutter/example/android/app/src/main/kotlin/it/ipzs/cie_sign_flutter_example/: MainActivity.kt
cie_sign_flutter/example/integration_test/: full_stack_mock_test.dart  mock_sign_integration_test.dart  plugin_integration_test.dart  ui_mock_flow_test.dart
cie_sign_flutter/example/ios/Runner/: Info.plist
cie_sign_flutter/example/ios/Runner.xcodeproj/: project.pbxproj
cie_sign_flutter/example/ios/RunnerTests/: RunnerTests.swift
cie_sign_flutter/example/lib/: main.dart  pdf_preview_page.dart
cie_sign_flutter/example/test/: mock_nfc_ui_test.dart  widget_test.dart
cie_sign_flutter/ios/: cie_sign_flutter.podspec
cie_sign_flutter/ios/Classes/: CieSignFlutterPlugin.h  CieSignFlutterPlugin.m
cie_sign_flutter/ios/Classes/Bridge/: CieNfcSession.h  CieNfcSession.mm  CieSignMobileBridge.h  CieSignMobileBridge.mm
cie_sign_flutter/ios/Classes/Mock/: mock_apdu_sequence.cpp  mock_apdu_sequence.h  mock_transport.cpp  mock_transport.h
cie_sign_flutter/lib/: cie_sign_flutter.dart  cie_sign_flutter_method_channel.dart  cie_sign_flutter_platform_interface.dart
cie_sign_flutter/lib/src/: nfc_session_event.dart  pdf_signature_appearance.dart
cie_sign_flutter/scripts/: deploy_android_device.sh
cie_sign_flutter/test/: cie_sign_flutter_method_channel_test.dart  cie_sign_flutter_platform_interface_test.dart  cie_sign_flutter_test.dart  nfc_session_event_test.dart
cie_sign_sdk/: CMakeLists.txt
cie_sign_sdk/docs/: build_mobile.md  mobile_architecture.md  nfc_integration_plan.md  tests_android.md  tests_ios.md
cie_sign_sdk/include/: CIESigner.h  PdfSignatureGenerator.h
cie_sign_sdk/include/mobile/: cie_mobile_log.h  cie_platform.h  cie_sign.h  cie_sign_version.h
cie_sign_sdk/scripts/: build_android_dependencies.sh  build_dependencies.sh  package_ios_unified.sh
cie_sign_sdk/src/: CIESigner.cpp  PdfSignatureGenerator.cpp  PdfVerifier.cpp  SignatureGenerator.cpp  SignedDocument.cpp  TSAClient.cpp  disigonsdk.cpp
cie_sign_sdk/src/CSP/: ATR.cpp  IAS.cpp
cie_sign_sdk/src/Crypto/: SHA256.cpp
cie_sign_sdk/src/mobile/: cie_sign_core.cpp  cie_sign_host_bridge.cpp
cie_sign_sdk/tests/dart_host/: pubspec.yaml
cie_sign_sdk/tests/dart_host/.dart_tool/: package_config.json  package_graph.json
cie_sign_sdk/tests/dart_host/.dart_tool/test/: incremental_kernel.Ly9AZGFydD0zLjQ=
cie_sign_sdk/tests/dart_host/lib/: cie_sign_host.dart
cie_sign_sdk/tests/dart_host/test/: mock_sign_test.dart
cie_sign_sdk/tests/ios/: CieSignTests-Bridging-Header.h  mock_sign_ios.mm
cie_sign_sdk/tests/mock/: mock_sign_test.cpp  mock_transport.h
cie_sign_sdk/tests/tools/: pdf_signature_check.cpp
ios/CieSignIosHost/: CieSignIosHost-Bridging-Header.h  CieSignIosHostApp.swift  ContentView.swift  Info.plist  SigningViewModel.swift
ios/CieSignIosTests/: CieSignBridgeTests.swift  MockSignTests.swift
ios/CieSignIosTests.xcodeproj/: project.pbxproj
ios/CieSignIosTests.xcodeproj/xcshareddata/xcschemes/: CieSignIosTests.xcscheme
scripts/: generate_sample_pdf.py
